# CircuitTester

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.linux  Dockerfile.linuxqt6  Dockerfile.linuxqtold  Dockerfile.win  README.md  build.pl  buildmac.sh  circuittester.pro  com.github.radams15.CircuitSim.yaml  deps.lin  deps.txt.bak  deps.txt.x86  deps.win  make.pl  movewindeps.pl  movewindeps.py  movewindeps_old.py
circuittester.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
docs/: CMakeLists.txt  Doxyfile.in
docs/docs/: Ammeter_8cc.html  Ammeter_8cc__incl.dot  Ammeter_8cc__incl.map  Ammeter_8cc__incl.md5  Ammeter_8cc_source.html  Ammeter_8h.html  Ammeter_8h__dep__incl.dot  Ammeter_8h__dep__incl.map  Ammeter_8h__dep__incl.md5  Ammeter_8h__incl.dot  Ammeter_8h__incl.map  Ammeter_8h__incl.md5  Ammeter_8h_source.html  AnalysisMapper_8cc.html  AnalysisMapper_8cc__incl.dot  AnalysisMapper_8cc__incl.map  AnalysisMapper_8cc__incl.md5  AnalysisMapper_8cc_af1b1d5d0c943d780bab64a290e17bf00_icgraph.map  AnalysisMapper_8cc_af1b1d5d0c943d780bab64a290e17bf00_icgraph.md5  AnalysisMapper_8cc_source.html  AnalysisMapper_8h.html  AnalysisMapper_8h__dep__incl.dot  AnalysisMapper_8h__dep__incl.map  AnalysisMapper_8h__dep__incl.md5  AnalysisMapper_8h__incl.dot  AnalysisMapper_8h__incl.map  AnalysisMapper_8h__incl.md5  AnalysisMapper_8h_source.html  Arrow_8cc.html  Arrow_8cc_source.html  Arrow_8h.html  Arrow_8h_source.html  Battery_8cc.html  Battery_8cc__incl.dot  Battery_8cc__incl.map  Battery_8cc__incl.md5  Battery_8cc_source.html  Battery_8cpp.html  Battery_8cpp__incl.map  Battery_8cpp__incl.md5  (+1731 more)
docs/docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_2.js  (+158 more)
docs/tagfiles/: qtcore.tags  qtgui.tags  qtwidgets.tags
lib/MNA/: MNA.h
resources/: CMakeCache.txt  CMakeLists.txt  CircuitSim.desktop  CircuitTester.icns  Info.plist  circuittesterui.rc  resources.qrc  template.plist.in
resources/css/: custom_titlebar.css  custom_toolbar.css  custom_window.css
resources/images/: about.txt
resources/theme/: light_cyan.qss  theme.qss
src/main/: CMakeLists.txt  ExpandingSpacer.h  main.cc  main.cpp  mainwindow.h
src/main/Analysis/: Circuit.cc  Circuit.h  Component.cc  Component.h  Equation.cpp  Equation.h  MNA.h  MNACircuit.cc  MNACircuit.cpp  MNACircuit.h  MNAComponent.cc  MNAComponent.h  MNAElement.cpp  MNAElement.h  MNASolution.cpp  MNASolution.h  Solution.cc  Solution.h  Unknown.cc  Unknown.cpp  Unknown.h
src/main/Components/: Battery.cpp  Battery.h  CurrentSource.cpp  CurrentSource.h  Resistor.cpp  Resistor.h
src/main/Saves/: CircuitSaver.cc  CircuitSaver.h  FileUtils.cc  FileUtils.cpp  FileUtils.h  UserUtils.cpp  UserUtils.h  json.h
src/main/UI/: AnalysisMapper.cc  AnalysisMapper.h  Arrow.cc  Arrow.h  CSDTitlebar.cpp  CSDTitlebar.h  CSDWindow.cpp  CSDWindow.h  ExpandingSpacer.h  HamburgerMenu.cc  HamburgerMenu.cpp  HamburgerMenu.h  Line.cc  Line.h  MainWindow.cc  MainWindow.cpp  MainWindow.h  Scene.cc  Scene.h  SceneItem.cc  SceneItem.h  SceneText.cc  SceneText.h  SettingsMenu.cc  SettingsMenu.h  UIComponent.cc  UIComponent.cpp  UIComponent.h  customtitlebar.cpp  customtitlebar.h  customwindow.cpp  customwindow.h  mainwindow.cpp
src/main/UI/Components/: Ammeter.cc  Ammeter.h  Battery.cc  Battery.h  ResistiveElement.h  Resistor.cc  Resistor.h  Switch.cc  Switch.h  Voltmeter.cc  Voltmeter.h  Wire.cc  Wire.h
src/test/: CMakeLists.txt  Test_MNA.cc  Test_MNA.cpp  Test_MNACircuit.cc  Test_MNACircuit.cpp  Test_MNAComponent.cc  Test_MNAEquation.cc  Test_SaveLoad.cc  Test_SaveLoad.cpp  nodal_analysis.cpp  test_main.cpp
